[package]
name = "wbrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19.2"
mime = "0.3.17"
http = "0.2.9"
clap = { version = "4.0.22", features = ["derive", "env"] }