[package]
name = "wbrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde-with-expand-env = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19.2"
mime = "0.3.17"
http = "0.2.9"
clap = { version = "4.0.22", features = ["derive", "env"] }
log = "0.4.17"
env_logger = "0.10.0"
regex = "1"
config = "0.13.3"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs", "sync", "full", "macros", "rt"] }
lazy_static = "1.4.0"
thiserror = "1.0.38"
once_cell = "1.17.1"
sqlx = { version = "0.6.3", features = ["postgres", "migrate", "runtime-tokio-rustls", "chrono", "uuid", "time", "mysql", "decimal", "macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.60"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
futures = "0.3.28"
redis = { version = "0.25.0", features = ["aio", "tokio-comp", "async-std-comp"] }
mysql = "25.0.1"
tokio-util = "0.7.7"
sea-orm = { version = "0.12.4", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"] }
syn = "2.0.77"
quote = "1.0.36"
proc-macro2 = "1.0.86"

[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[lib]
proc-macro = true